# shape-hack

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TASKS.md  docker-compose.yaml  docker-compose.yml  foundry.toml  index.html  package.json  phala.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
app/: attestation.py  extractor.py  main.py  onchain.py  oracle.py  redaction.py
contracts/: PropsCertRegistry.sol
docs/: current-judging-status.md  deploy-plan.md  execution-board.md  fix-priorities.md  frontend-improvements.md  hackathon-scorecard.md  issues-found.md  master-plan.md  pitch-deck.md  repo-map.md  run-backend-task.md  run-frontend-task.md  run-infra-task.md  run-intel-ta.md  run-score-improvements.md  run-vercel-deploy.md
examples/: oracle_config.yaml  verify_certificate.py
frontend/: index.html  props_demo.html  props_demo_frontend.html
frontend_props/public/: index.html
frontend_props/src/: App.js  index.js
frontend_props/src/api/: whoopApi.js
frontend_props/src/components/: AttestationVerifier.js  LoginForm.js
frontend_props/src/utils/: crypto.js
scripts/: client.py  deploy_contract.py  requirements.txt  verify_attestation.py
sdk/: pyproject.toml
sdk/props_verify/: __init__.py  client.py  crypto.py
src/: api.rs  data_downloader.rs  lib.rs  main.rs  model_trainer.rs
tests/: test_judge_flow.py  test_pipeline.py  test_readiness.py
