[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "props-verify"
version = "0.1.0"
description = "Verify Props certificates from any Python application"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "cryptography>=41.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/anthropics/props-verify"

[tool.setuptools.packages.find]
include = ["props_verify*"]
